--- a/dlink-modem-page/backend/locales/en/translations.json
+++ b/dlink-modem-page/backend/locales/en/translations.json
@@ -1,5 +1,6 @@
 {
     "hello_world": "Hello World",
     "welcome":"Welcome",
-    "username":"Username"
+    "username":"Username",
+    "name": "Name"
 }
