--- a/dlink-modem-page/backend/locales/it/translations.json
+++ b/dlink-modem-page/backend/locales/it/translations.json
@@ -6,5 +6,7 @@
     "error_username": "Il nome utente non deve essere vuoto",
     "usernameDoesntMatch": "Errore username",
     "passwordEmpty": "La password non deve essere vuota",
-    "passwordLength": "La password deve essere di almeno 6 caratteri"
+    "passwordLength": "La password deve essere di almeno 6 caratteri",
+    "createAccount":"Crea Account",
+    "forgotPassword":"Password dimenticata?"
 }
