--- a/dlink-modem-page/backend/locales/en/translations.json
+++ b/dlink-modem-page/backend/locales/en/translations.json
@@ -6,5 +6,7 @@
     "error_username": "Username is required",
     "usernameDoesntMatch": "Username error",
     "passwordEmpty": "Password is required",
-    "passwordLength": "Password should be at least 6 char"
+    "passwordLength": "Password should be at least 6 char",
+    "createAccount":"Create Account",
+    "forgotPassword":"Forgot Password?"
 }
