css for language selector

--- a/dlink-modem-page/backend/locales/en/translations.json
+++ b/dlink-modem-page/backend/locales/en/translations.json
@@ -8,5 +8,6 @@
     "passwordEmpty": "Password is required",
     "passwordLength": "Password should be at least 6 char",
     "createAccount":"Create Account",
-    "forgotPassword":"Forgot Password?"
+    "forgotPassword":"Forgot Password?",
+    "selectLanguage":"Select language"
 }
